[tool.poetry]
name = "pemkrk"
version = "0.1.0"
description = ""
authors = ["jakubste"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1"
mkdocs-material = "^5.1.5"
pymdown-extensions = "^7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
